<resources>
    <string name="app_name">Book List App</string>
    <string name="book_image">Book Image</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author</string>
    <string name="splash_quote">A reader lives a thousand lives before he dies.</string>
    <string name="add_books">Add Books</string>
    <string name="add_new_book">Add New Book</string>
    <string name="add_author_name">Add Author\'s Name</string>
    <string name="add_book">Add Book</string>
    <string name="add_book_name">Add Book Name</string>
    <string name="update_book_details">Update Book Details</string>
    <string name="edit_name_of_book">Edit Name of Book</string>
</resources>